--- a/config/database.yml
+++ b/config/database.yml
@@ -1,3 +1,17 @@
+# Using sqlite for dev and test .. because .. well .. I got lazy
+
+development:
+  adapter: sqlite3
+  database: db/development.sqlite3
+  pool: 5
+  timeout: 5000
+
+test:
+  adapter: sqlite3
+  database: db/test.sqlite3
+  pool: 5
+  timeout: 5000
+
 # PostgreSQL. Versions 8.2 and up are supported.
 #
 # Install the pg driver:
@@ -12,13 +26,15 @@
 # Configure Using Gemfile
 # gem 'pg'
 #
-development:
-  adapter: postgresql
-  encoding: unicode
-  database: ssa_development
-  pool: 5
-  username: ssa
-  password: ssa
+
+# I'm commenting these out now
+# development:
+#   adapter: postgresql
+#   encoding: unicode
+#   database: ssa_development
+#   pool: 5
+#   username: ssa
+#   password: ssa
 
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
@@ -38,13 +54,15 @@ development:
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
-test:
-  adapter: postgresql
-  encoding: unicode
-  database: ssa_test
-  pool: 5
-  username: ssa
-  password:
+
+# I'm commenting this out too - because I'm using sqlite locally
+# test:
+#   adapter: postgresql
+#   encoding: unicode
+#   database: ssa_test
+#   pool: 5
+#   username: ssa
+#   password:
 
 production:
   adapter: postgresql
