--- a/config/database.yml
+++ b/config/database.yml
@@ -1,5 +1,3 @@
-# Using sqlite for dev and test .. because .. well .. I got lazy
-
 development:
   adapter: sqlite3
   database: db/development.sqlite3
@@ -12,62 +10,9 @@ test:
   pool: 5
   timeout: 5000
 
-# PostgreSQL. Versions 8.2 and up are supported.
-#
-# Install the pg driver:
-#   gem install pg
-# On Mac OS X with macports:
-#   gem install pg -- --with-pg-config=/opt/local/lib/postgresql84/bin/pg_config
-# On Windows:
-#   gem install pg
-#       Choose the win32 build.
-#       Install PostgreSQL and put its /bin directory on your path.
-#
-# Configure Using Gemfile
-# gem 'pg'
-#
-
-# I'm commenting these out now
-# development:
-#   adapter: postgresql
-#   encoding: unicode
-#   database: ssa_development
-#   pool: 5
-#   username: ssa
-#   password: ssa
-
-  # Connect on a TCP socket. Omitted by default since the client uses a
-  # domain socket that doesn't need configuration. Windows does not have
-  # domain sockets, so uncomment these lines.
-  #host: localhost
-  #port: 5432
-
-  # Schema search path. The server defaults to $user,public
-  #schema_search_path: myapp,sharedapp,public
-
-  # Minimum log levels, in increasing order:
-  #   debug5, debug4, debug3, debug2, debug1,
-  #   log, notice, warning, error, fatal, and panic
-  # The server defaults to notice.
-  #min_messages: warning
-
-# Warning: The database defined as "test" will be erased and
-# re-generated from your development database when you run "rake".
-# Do not set this db to the same as development or production.
-
-# I'm commenting this out too - because I'm using sqlite locally
-# test:
-#   adapter: postgresql
-#   encoding: unicode
-#   database: ssa_test
-#   pool: 5
-#   username: ssa
-#   password:
-
 production:
-  adapter: postgresql
-  encoding: unicode
-  database: ssa_production
+  adapter: sqlite3
+  database: db/prod.sqlite3
   pool: 5
-  username: ssa
-  password:
+  timeout: 5000
+  
